--- a/test/vcr_cassettes/search_journal_search_not_logged_in_CU.yml
+++ b/test/vcr_cassettes/search_journal_search_not_logged_in_CU.yml
@@ -1,32 +1,105 @@
---- 
-http_interactions: 
-- request: 
+---
+http_interactions:
+- request:
     method: post
     uri: http://DUMMY_SOLR_INSTANCE/select?wt=ruby
-    body: 
+    body:
       encoding: US-ASCII
       string: fq=type%3ASfx4%5C%3A%5C%3ACu%5C%3A%5C%3AAzTitle&sort=score+desc%2C+title_sort_s+asc&q=NEW+YORK&fl=%2A+score&qf=title_text%5E1.0&defType=dismax&bq=title_exact_sm%3ANEW%5C+YORK%5E10.0&start=0&rows=20
-    headers: 
-      Content-Type: 
+    headers:
+      Content-Type:
       - application/x-www-form-urlencoded; charset=UTF-8
-  response: 
-    status: 
+  response:
+    status:
       code: 200
       message: OK
-    headers: 
-      Server: 
+    headers:
+      Server:
       - Apache-Coyote/1.1
-      Content-Type: 
+      Content-Type:
       - text/plain;charset=UTF-8
-      Transfer-Encoding: 
+      Transfer-Encoding:
       - chunked
-      Date: 
-      - Fri, 06 Sep 2013 17:26:43 GMT
-      Connection: 
+      Date:
+      - Mon, 09 Sep 2013 20:25:55 GMT
+      Connection:
       - close
-    body: 
+    body:
       encoding: US-ASCII
-      string: "{'responseHeader'=>{'status'=>0,'QTime'=>1,'params'=>{'sort'=>'score desc, title_sort_s asc','qf'=>'title_text^1.0','wt'=>'ruby','defType'=>'dismax','rows'=>'20','fl'=>'* score','bq'=>'title_exact_sm:NEW\\\\ YORK^10.0','start'=>'0','q'=>'NEW YORK','fq'=>'type:Sfx4\\\\:\\\\:Cu\\\\:\\\\:AzTitle'}},'response'=>{'numFound'=>132,'start'=>0,'maxScore'=>12.620435,'docs'=>[{'id'=>'Sfx4::Cu::AzTitle 55064','object_id_ss'=>'110975413975942','title_display_ss'=>'New York','issn_ss'=>'0028-7369','isbn_ss'=>'','lccn_ss'=>'76012785','score'=>12.620435},{'id'=>'Sfx4::Cu::AzTitle 38426','object_id_ss'=>'111038323492012','title_display_ss'=>'New York Diamonds','issn_ss'=>'1538-7402','isbn_ss'=>'','lccn_ss'=>'2001214764','score'=>0.31844527},{'id'=>'Sfx4::Cu::AzTitle 22187','object_id_ss'=>'954925474423','title_display_ss'=>'New York history','issn_ss'=>'0146-437X','isbn_ss'=>'','lccn_ss'=>'21027150','score'=>0.31844527},{'id'=>'Sfx4::Cu::AzTitle 44601','object_id_ss'=>'1000000000390911','title_display_ss'=>'New-York tribune','issn_ss'=>'1941-0646','isbn_ss'=>'','lccn_ss'=>'2009252751','score'=>0.31844527},{'id'=>'Sfx4::Cu::AzTitle 41691','object_id_ss'=>'110975413976006','title_display_ss'=>'The New York times','issn_ss'=>'0362-4331','isbn_ss'=>'','lccn_ss'=>'sn78004456','score'=>0.27519938},{'id'=>'Sfx4::Cu::AzTitle 45723','object_id_ss'=>'1000000000523340','title_display_ss'=>'amNewYork (New York, NY)','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 19298','object_id_ss'=>'1000000000311297','title_display_ss'=>'The annals of the New York Academy of Dentistry','issn_ss'=>'1931-6585','isbn_ss'=>'','lccn_ss'=>'2006243161','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 32120','object_id_ss'=>'991042731763438','title_display_ss'=>'Bulletin of the New York Shakespear Society','issn_ss'=>'1075-1661','isbn_ss'=>'','lccn_ss'=>'94640719','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 27291','object_id_ss'=>'1000000000528267','title_display_ss'=>'Journal of the Anthropological Institute of New York','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 2116','object_id_ss'=>'991042728880280','title_display_ss'=>'Legal times of New York','issn_ss'=>'0748-3368','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 54501','object_id_ss'=>'1000000000214880','title_display_ss'=>'New York Daily News','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 52190','object_id_ss'=>'3580000000000334','title_display_ss'=>'New York Daily Times','issn_ss'=>'','isbn_ss'=>'','lccn_ss'=>'sn83030746','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 39431','object_id_ss'=>'2320000000019888','title_display_ss'=>'New-York daily tribune','issn_ss'=>'2158-2661','isbn_ss'=>'','lccn_ss'=>'sn83030213','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 27988','object_id_ss'=>'991042746955292','title_display_ss'=>'New York edition newsday','issn_ss'=>'0889-793X','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 52308','object_id_ss'=>'954925521687','title_display_ss'=>'New York folklore','issn_ss'=>'0361-204X','isbn_ss'=>'','lccn_ss'=>'','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 52108','object_id_ss'=>'1000000000319369','title_display_ss'=>'The New York journal of sociology','issn_ss'=>'1935-9357','isbn_ss'=>'','lccn_ss'=>'2007214206','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 11628','object_id_ss'=>'111014153140000','title_display_ss'=>'New York State conservationist','issn_ss'=>'0097-3319','isbn_ss'=>'','lccn_ss'=>'sn81003787','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 32759','object_id_ss'=>'2670000000058985','title_display_ss'=>'New York State Conservationist','issn_ss'=>'2157-1082','isbn_ss'=>'','lccn_ss'=>'sn95049098','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 20754','object_id_ss'=>'110978977974450','title_display_ss'=>'New York State statistical yearbook','issn_ss'=>'0077-9334','isbn_ss'=>'','lccn_ss'=>'68065956','score'=>0.26537102},{'id'=>'Sfx4::Cu::AzTitle 10468','object_id_ss'=>'954926952805','title_display_ss'=>'Sciences','issn_ss'=>'0036-861X','isbn_ss'=>'','lccn_ss'=>'76647572','score'=>0.26537102}]}}"
+      string: ! '{''responseHeader''=>{''status''=>0,''QTime''=>1,''params''=>{''sort''=>''score
+        desc, title_sort_s asc'',''qf''=>''title_text^1.0'',''wt''=>''ruby'',''defType''=>''dismax'',''rows''=>''20'',''fl''=>''*
+        score'',''bq''=>''title_exact_sm:NEW\\ YORK^10.0'',''start''=>''0'',''q''=>''NEW
+        YORK'',''fq''=>''type:Sfx4\\:\\:Cu\\:\\:AzTitle''}},''response''=>{''numFound''=>132,''start''=>0,''maxScore''=>12.623564,''docs''=>[{''id''=>''Sfx4::Cu::AzTitle
+        55064'',''object_id_ss''=>''110975413975942'',''title_display_ss''=>''New
+        York'',''issn_ss''=>''0028-7369'',''isbn_ss''=>'''',''lccn_ss''=>''76012785'',''score''=>12.623564},{''id''=>''Sfx4::Cu::AzTitle
+        38426'',''object_id_ss''=>''111038323492012'',''title_display_ss''=>''New
+        York Diamonds'',''issn_ss''=>''1538-7402'',''isbn_ss''=>'''',''lccn_ss''=>''2001214764'',''score''=>0.31867394},{''id''=>''Sfx4::Cu::AzTitle
+        22187'',''object_id_ss''=>''954925474423'',''title_display_ss''=>''New York
+        history'',''issn_ss''=>''0146-437X'',''isbn_ss''=>'''',''lccn_ss''=>''21027150'',''score''=>0.31867394},{''id''=>''Sfx4::Cu::AzTitle
+        44601'',''object_id_ss''=>''1000000000390911'',''title_display_ss''=>''New-York
+        tribune'',''issn_ss''=>''1941-0646'',''isbn_ss''=>'''',''lccn_ss''=>''2009252751'',''score''=>0.31867394},{''id''=>''Sfx4::Cu::AzTitle
+        41691'',''object_id_ss''=>''110975413976006'',''title_display_ss''=>''The
+        New York times'',''issn_ss''=>''0362-4331'',''isbn_ss''=>'''',''lccn_ss''=>''sn78004456'',''score''=>0.27539617},{''id''=>''Sfx4::Cu::AzTitle
+        45723'',''object_id_ss''=>''1000000000523340'',''title_display_ss''=>''amNewYork
+        (New York, NY)'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        19298'',''object_id_ss''=>''1000000000311297'',''title_display_ss''=>''The
+        annals of the New York Academy of Dentistry'',''issn_ss''=>''1931-6585'',''isbn_ss''=>'''',''lccn_ss''=>''2006243161'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        32120'',''object_id_ss''=>''991042731763438'',''title_display_ss''=>''Bulletin
+        of the New York Shakespear Society'',''issn_ss''=>''1075-1661'',''isbn_ss''=>'''',''lccn_ss''=>''94640719'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        27291'',''object_id_ss''=>''1000000000528267'',''title_display_ss''=>''Journal
+        of the Anthropological Institute of New York'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        2116'',''object_id_ss''=>''991042728880280'',''title_display_ss''=>''Legal
+        times of New York'',''issn_ss''=>''0748-3368'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        54501'',''object_id_ss''=>''1000000000214880'',''title_display_ss''=>''New
+        York Daily News'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        52190'',''object_id_ss''=>''3580000000000334'',''title_display_ss''=>''New
+        York Daily Times'',''issn_ss''=>'''',''isbn_ss''=>'''',''lccn_ss''=>''sn83030746'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        39431'',''object_id_ss''=>''2320000000019888'',''title_display_ss''=>''New-York
+        daily tribune'',''issn_ss''=>''2158-2661'',''isbn_ss''=>'''',''lccn_ss''=>''sn83030213'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        27988'',''object_id_ss''=>''991042746955292'',''title_display_ss''=>''New
+        York edition newsday'',''issn_ss''=>''0889-793X'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        52308'',''object_id_ss''=>''954925521687'',''title_display_ss''=>''New York
+        folklore'',''issn_ss''=>''0361-204X'',''isbn_ss''=>'''',''lccn_ss''=>'''',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        52108'',''object_id_ss''=>''1000000000319369'',''title_display_ss''=>''The
+        New York journal of sociology'',''issn_ss''=>''1935-9357'',''isbn_ss''=>'''',''lccn_ss''=>''2007214206'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        11628'',''object_id_ss''=>''111014153140000'',''title_display_ss''=>''New
+        York State conservationist'',''issn_ss''=>''0097-3319'',''isbn_ss''=>'''',''lccn_ss''=>''sn81003787'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        32759'',''object_id_ss''=>''2670000000058985'',''title_display_ss''=>''New
+        York State Conservationist'',''issn_ss''=>''2157-1082'',''isbn_ss''=>'''',''lccn_ss''=>''sn95049098'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        20754'',''object_id_ss''=>''110978977974450'',''title_display_ss''=>''New
+        York State statistical yearbook'',''issn_ss''=>''0077-9334'',''isbn_ss''=>'''',''lccn_ss''=>''68065956'',''score''=>0.2655616},{''id''=>''Sfx4::Cu::AzTitle
+        10468'',''object_id_ss''=>''954926952805'',''title_display_ss''=>''Sciences'',''issn_ss''=>''0036-861X'',''isbn_ss''=>'''',''lccn_ss''=>''76647572'',''score''=>0.2655616}]}}'
     http_version: 
-  recorded_at: Fri, 06 Sep 2013 17:26:43 GMT
+  recorded_at: Mon, 09 Sep 2013 20:25:56 GMT
+- request:
+    method: get
+    uri: https://login.nyu.edu/sso/identity/getCookieNameForToken
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - Apache-Coyote/1.1
+      Content-Type:
+      - text/plain;charset=UTF-8
+      Content-Length:
+      - '27'
+      Date:
+      - Mon, 09 Sep 2013 20:25:55 GMT
+    body:
+      encoding: US-ASCII
+      string: ! 'string=iPlanetDirectoryPro
+
+'
+    http_version: 
+  recorded_at: Mon, 09 Sep 2013 20:25:56 GMT
 recorded_with: VCR 2.4.0
